<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MathTools</string>
    <string name="action_settings">Settings</string>
	<string name="button_0">0</string>
	<string name="button_1">1</string>
	<string name="button_2">2</string>
	<string name="button_3">3</string>
	<string name="button_4">4</string>
	<string name="button_5">5</string>
	<string name="button_6">6</string>
	<string name="button_7">7</string>
	<string name="button_8">8</string>
	<string name="button_9">9</string>
	<string name="button_del">Del</string>
	<string name="button_add">+</string>
	<string name="button_c">C</string>
	<string name="button_div">÷</string>
	<string name="button_sub">-</string>
	<string name="button_mul">×</string>
	<string name="button_sqrt">√</string>
	<string name="button_square">^2</string>
	<string name="button_bracket">(			)</string>
	<string name="button_equal">=</string>
	<string name="button_mod">%</string>
	<string name="button_point">.</string>
	<string name="button_opposite">±</string>
	<string name="button_ce">CE</string>
	<string name="title_text">标准计算器</string>
	<string name="title_about">关于</string>
	<string name="title_back">BACK</string>

</resources>
